--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "inkscape2servo"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Henrik Böving <hargonix@gmail.com>"]
 edition = "2018"
 
@@ -8,3 +8,4 @@ edition = "2018"
 quicli = "0.4"
 structopt = "0.2"
 regex = "1.1.0"
+reqwest = "0.9"
